apps/lgtm-prometheus/overlays/dev/lgtm-prometheus_IngressRoute_dev.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  routes:
    - kind: Rule
      match: Host(`dev-overwatch.thelemonsclan.com`) 
      services:
        - kind: Service
          name: kube-prometheus-stack-grafana
          passHostHeader: true
          port: 80
